@@ -23,10 +23,17 @@ package cascading.flow;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.URI;
 
 import cascading.ClusterTestCase;
 import cascading.cascade.Cascade;
 import cascading.cascade.CascadeConnector;
+import cascading.pipe.Pipe;
+import cascading.scheme.TextLine;
+import cascading.tap.Hfs;
+import cascading.tap.Tap;
+import cascading.tuple.Fields;
+import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.io.LongWritable;
 import org.apache.hadoop.io.Text;
@@ -44,10 +51,11 @@ import org.apache.hadoop.mapred.lib.IdentityReducer;
 public class MapReduceFlowTest extends ClusterTestCase
   {
   String inputFileApache = "build/test/data/apache.10.txt";
-  String outputPath = "build/test/output/mapreduceflow/";
-  String outputPath1 = "build/test/output/mapreducecascade1/";
-  String outputPath2 = "build/test/output/mapreducecascade2/";
-  String outputPath3 = "build/test/output/mapreducecascade3/";
+  String outputPath1 = "build/test/output/mrflow/flow1/";
+  String outputPath2 = "build/test/output/mrflow/flow2/";
+  String outputPath3 = "build/test/output/mrflow/flow3/";
+  String outputPath4 = "build/test/output/mrflow/flow4/";
+  String outputPath5 = "build/test/output/mrflow/flow5/";
 
   public MapReduceFlowTest()
     {
@@ -76,7 +84,7 @@ public class MapReduceFlowTest extends ClusterTestCase
     conf.setOutputFormat( TextOutputFormat.class );
 
     FileInputFormat.setInputPaths( conf, new Path( inputFileApache ) );
-    FileOutputFormat.setOutputPath( conf, new Path( outputPath ) );
+    FileOutputFormat.setOutputPath( conf, new Path( outputPath1 ) );
 
     Flow flow = new MapReduceFlow( "mrflow", conf, true );
 
@@ -87,6 +95,16 @@ public class MapReduceFlowTest extends ClusterTestCase
     validateLength( flow.openSink(), 10 );
     }
 
+  private String resolve( String path, boolean delete ) throws IOException
+    {
+    FileSystem fs = FileSystem.get( URI.create( path ), MultiMapReducePlanner.getJobConf( getProperties() ) );
+
+    if( delete )
+      fs.delete( new Path( path ), true );
+
+    return fs.makeQualified( new Path( path ) ).toString();
+    }
+
   public void testCascade() throws IOException
     {
     if( !new File( inputFileApache ).exists() )
@@ -94,10 +112,18 @@ public class MapReduceFlowTest extends ClusterTestCase
 
     copyFromLocal( inputFileApache );
 
+    // Setup two standard cascading flows that will generate the input for the first MapReduceFlow
+    Tap source1 = new Hfs( new TextLine( new Fields( "offset", "line" ) ), resolve( inputFileApache, false ) );
+    Tap sink1 = new Hfs( new TextLine( new Fields( "offset", "line" ) ), resolve( outputPath4, true ), true );
+    Flow firstFlow = new FlowConnector().connect( source1, sink1, new Pipe( "first-flow" ) );
+
+    Tap sink2 = new Hfs( new TextLine( new Fields( "offset", "line" ) ), resolve( outputPath5, true ), true );
+    Flow secondFlow = new FlowConnector().connect( sink1, sink2, new Pipe( "second-flow" ) );
+
     JobConf defaultConf = MultiMapReducePlanner.getJobConf( getProperties() );
 
     JobConf firstConf = new JobConf( defaultConf );
-    firstConf.setJobName( "first" );
+    firstConf.setJobName( "first-mr" );
 
     firstConf.setOutputKeyClass( LongWritable.class );
     firstConf.setOutputValueClass( Text.class );
@@ -108,13 +134,13 @@ public class MapReduceFlowTest extends ClusterTestCase
     firstConf.setInputFormat( TextInputFormat.class );
     firstConf.setOutputFormat( TextOutputFormat.class );
 
-    FileInputFormat.setInputPaths( firstConf, new Path( inputFileApache ) );
-    FileOutputFormat.setOutputPath( firstConf, new Path( outputPath1 ) );
+    FileInputFormat.setInputPaths( firstConf, new Path( resolve( outputPath5, true ) ) );
+    FileOutputFormat.setOutputPath( firstConf, new Path( resolve( outputPath1, true ) ) );
 
-    Flow firstFlow = new MapReduceFlow( firstConf, true );
+    Flow firstMR = new MapReduceFlow( firstConf, true );
 
     JobConf secondConf = new JobConf( defaultConf );
-    secondConf.setJobName( "second" );
+    secondConf.setJobName( "second-mr" );
 
     secondConf.setOutputKeyClass( LongWritable.class );
     secondConf.setOutputValueClass( Text.class );
@@ -125,13 +151,13 @@ public class MapReduceFlowTest extends ClusterTestCase
     secondConf.setInputFormat( TextInputFormat.class );
     secondConf.setOutputFormat( TextOutputFormat.class );
 
-    FileInputFormat.setInputPaths( secondConf, new Path( outputPath1 ) );
-    FileOutputFormat.setOutputPath( secondConf, new Path( outputPath2 ) );
+    FileInputFormat.setInputPaths( secondConf, new Path( resolve( outputPath1, true ) ) );
+    FileOutputFormat.setOutputPath( secondConf, new Path( resolve( outputPath2, true ) ) );
 
-    Flow secondFlow = new MapReduceFlow( secondConf, true );
+    Flow secondMR = new MapReduceFlow( secondConf, true );
 
     JobConf thirdConf = new JobConf( defaultConf );
-    thirdConf.setJobName( "third" );
+    thirdConf.setJobName( "third-mr" );
 
     thirdConf.setOutputKeyClass( LongWritable.class );
     thirdConf.setOutputValueClass( Text.class );
@@ -142,18 +168,21 @@ public class MapReduceFlowTest extends ClusterTestCase
     thirdConf.setInputFormat( TextInputFormat.class );
     thirdConf.setOutputFormat( TextOutputFormat.class );
 
-    FileInputFormat.setInputPaths( thirdConf, new Path( outputPath2 ) );
-    FileOutputFormat.setOutputPath( thirdConf, new Path( outputPath3 ) );
+    FileInputFormat.setInputPaths( thirdConf, new Path( resolve( outputPath2, true ) ) );
+    FileOutputFormat.setOutputPath( thirdConf, new Path( resolve( outputPath3, true ) ) );
 
-    Flow thirdFlow = new MapReduceFlow( thirdConf, true );
+    Flow thirdMR = new MapReduceFlow( thirdConf, true );
 
     CascadeConnector cascadeConnector = new CascadeConnector();
 
     // pass out of order
-    Cascade cascade = cascadeConnector.connect( thirdFlow, firstFlow, secondFlow );
+    Cascade cascade = cascadeConnector.connect( firstFlow, secondFlow, thirdMR, firstMR, secondMR );
+
+//    cascade.writeDOT( "mrcascade.dot" );
 
     cascade.complete();
 
-    validateLength( thirdFlow.openSink(), 10 );
+    validateLength( thirdMR.openSink(), 10 );
     }
+
   }
